test/libhyperion/syntaxTests/parsing/function_type_in_struct.hyp
contract test {
    struct S {
        function (uint, uint) internal returns (uint) f;
        function (uint, uint) external returns (uint) g;
        uint d;
    }
}
// ----
// TypeError 4888: (96-143): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
